@@ -9,6 +9,9 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Emilio Pozuelo Monfort <pochu@debian.org>, Sebastian Dröge <slomo@debian.org>, Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: debhelper (>= 5),
+               dpkg-dev (>= 1.13.19),
+               cdbs,
+               gnome-pkg-tools,
                libgconf2-dev,
                libglib2.0-dev (>= 2.21.3),
                libgnome-keyring-dev,
@@ -16,10 +19,8 @@ Build-Depends: debhelper (>= 5),
                libproxy-dev,
                libsqlite3-dev,
                libxml2-dev,
-               cdbs,
                gtk-doc-tools,
-               gnome-pkg-tools,
-               dpkg-dev (>= 1.13.19)
+               shared-mime-info
 Build-Depends-Indep: libglib2.0-doc
 Build-Conflicts: libgnutls11-dev
 Vcs-Svn: svn://svn.debian.org/svn/pkg-gnome/desktop/experimental/libsoup2.4
