@@ -2,6 +2,9 @@ libsoup2.4 (2.29.91-2) UNRELEASED; urgency=low
 
   * debian/rules:
     - Enable the test suite during the build, but don't make it fatal yet.
+  * debian/control.in:
+    - Build dep on shared-mime-info, needed for one test to pass.
+    - Reorder build-deps a bit.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 11 Mar 2010 22:36:22 +0100
 
